--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <!-- Переваги -->
       <section>
         <!-- Переваги потім скрити -->
-        <h2>Наші Переваги</h2>
+        <h2 class="visually-hidden">Наші Переваги</h2>
         <ul class="advantages list">
           <li>
             <h3 class="header">Увага до деталей</h3>
