--- a/portfolio.html
+++ b/portfolio.html
@@ -37,11 +37,11 @@
         </li>
       </ul>
     </header>
-    >
+
     <main>
       <section class="works">
         <!--Заголовок скрити-->
-        <h1>Приклади робіт</h1>
+        <h1 class="visually-hidden">Приклади робіт</h1>
 
         <ul class="list">
           <li>
