--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
           </li>
         </ul>
 
-        <ul class="works list">
+        <ul class="list">
           <li>
             <a href="" class="card">
               <img
@@ -102,7 +102,7 @@
           <li>
             <a href="" class="card">
               <img src="./images/Prime.jpg" alt="Навушники" width="370" />
-              <h2>Проєкт <span lang="en">Prime</span></h2>
+              <h2 class="title">Проєкт <span lang="en">Prime</span></h2>
               <span class="category">Маркетинг</span>
             </a>
           </li>
@@ -162,7 +162,7 @@
                 alt="Чоловік працює на лептопі"
                 width="370"
               />
-              <h2 lang="en">Growing Business</h2>
+              <h2 lang="en" class="title">Growing Business</h2>
               <span class="category">Додаток</span>
             </a>
           </li>
