--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <section class="team">
         <h2 class="header">Наша команда</h2>
         <ul class="list">
-          <li>
+          <li class="team-item">
             <img
               src="./images/idemianenko.jpg"
               alt="Ігор Дем'яненко"
@@ -99,17 +99,17 @@
             <h3 class="name">Ігор Дем'яненко</h3>
             <p lang="en" class="position">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/orepina.jpg" alt="Ольга Рєпіна" width="270" />
             <h3 class="name">Ольга Рєпіна</h3>
             <p lang="en" class="position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/mtarasov.jpg" alt="Микола Тарасов" width="270" />
             <h3 class="name">Микола Тарасов</h3>
             <p lang="en" class="position">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/mermakov.jpg"
               alt="Михайло Єрмаков"
