--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
                 width="370"
               />
               <h2 class="title">Технокряк</h2>
-              <span class="category">Веб-сайт</span>
+              <p class="category">Веб-сайт</p>
             </a>
           </li>
           <li>
@@ -83,7 +83,7 @@
               <h2 class="title">
                 Постер <span lang="en">New Orlean vs Golden Star</span>
               </h2>
-              <span class="category">Дизайн</span>
+              <p class="category">Дизайн</p>
             </a>
           </li>
 
@@ -95,7 +95,7 @@
                 width="370"
               />
               <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
-              <span class="category">Додаток</span>
+              <p class="category">Додаток</p>
             </a>
           </li>
 
@@ -103,7 +103,7 @@
             <a href="" class="card">
               <img src="./images/Prime.jpg" alt="Навушники" width="370" />
               <h2 class="title">Проєкт <span lang="en">Prime</span></h2>
-              <span class="category">Маркетинг</span>
+              <p class="category">Маркетинг</p>
             </a>
           </li>
 
@@ -115,7 +115,7 @@
                 width="370"
               />
               <h2 class="title">Проєкт <span lang="en">Boxes</span></h2>
-              <span class="category">Додаток</span>
+              <p class="category">Додаток</p>
             </a>
           </li>
 
@@ -127,7 +127,7 @@
                 width="370"
               />
               <h2 lang="en" class="title">Inspiration has no Borders</h2>
-              <span class="category">Веб-сайт</span>
+              <p class="category">Веб-сайт</span>
             </a>
           </li>
 
@@ -140,7 +140,7 @@
               />
 
               <h2 class="title">Видання <span lang="en">Edition</span></h2>
-              <span class="category">Дизайн</span>
+              <p class="category">Дизайн</span>
             </a>
           </li>
 
@@ -152,7 +152,7 @@
                 width="370"
               />
               <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
-              <span class="category">Маркетинг</span>
+              <p class="category">Маркетинг</span>
             </a>
           </li>
           <li>
@@ -163,7 +163,7 @@
                 width="370"
               />
               <h2 lang="en" class="title">Growing Business</h2>
-              <span class="category">Додаток</span>
+              <p class="category">Додаток</span>
             </a>
           </li>
         </ul>
