--- a/portfolio.html
+++ b/portfolio.html
@@ -127,7 +127,7 @@
                 width="370"
               />
               <h2 lang="en" class="title">Inspiration has no Borders</h2>
-              <p class="category">Веб-сайт</span>
+              <p class="category">Веб-сайт</p>
             </a>
           </li>
 
@@ -140,7 +140,7 @@
               />
 
               <h2 class="title">Видання <span lang="en">Edition</span></h2>
-              <p class="category">Дизайн</span>
+              <p class="category">Дизайн</p>
             </a>
           </li>
 
@@ -152,7 +152,7 @@
                 width="370"
               />
               <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
-              <p class="category">Маркетинг</span>
+              <p class="category">Маркетинг</p>
             </a>
           </li>
           <li>
@@ -163,7 +163,7 @@
                 width="370"
               />
               <h2 lang="en" class="title">Growing Business</h2>
-              <p class="category">Додаток</span>
+              <p class="category">Додаток</p>
             </a>
           </li>
         </ul>
